tests/parser/snapshots/parser_tests__parser__binary_expr__parens_override_precedence.snap
---
source: tests/parser/binary_expr.rs
expression: ast
---
Program {
    stmts: [
        DeclarVar {
            name: Ident {
                name: "x",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            type_: Some(
                TypeName {
                    name: "3dd",
                    type_: Edd,
                    span: Span {
                        start: 4,
                        end: 7,
                    },
                },
            ),
            value: Spanned {
                node: Binary {
                    left: Spanned {
                        node: Binary {
                            left: Spanned {
                                node: Number(
                                    2,
                                ),
                                span: Span {
                                    start: 11,
                                    end: 12,
                                },
                            },
                            op: Add,
                            right: Spanned {
                                node: Number(
                                    3,
                                ),
                                span: Span {
                                    start: 15,
                                    end: 16,
                                },
                            },
                        },
                        span: Span {
                            start: 11,
                            end: 16,
                        },
                    },
                    op: Mul,
                    right: Spanned {
                        node: Number(
                            4,
                        ),
                        span: Span {
                            start: 20,
                            end: 21,
                        },
                    },
                },
                span: Span {
                    start: 10,
                    end: 21,
                },
            },
        },
    ],
}
